# pcr-quic

./: .gitignore  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_SETUP.md  README.md  SETUP.md  SUMMARY.md  push_to_github.sh  quiche  test.sh  test_integration.sh
.cargo/: config.toml
benchmarks/ftth/: compare_results.sh  run_tests.sh  setup_network.sh
benchmarks/ftth/results/: baseline_run1_20260114_134332.json  baseline_run1_20260114_135655.json  baseline_run2_20260114_134724.json  baseline_run2_20260114_140045.json  baseline_run3_20260114_140436.json
benchmarks/results/: .gitkeep
examples/: Cargo.toml  README.md  basic_ratchet.rs
pcr-quic/: Cargo.toml
pcr-quic-crate/: Cargo.toml  build.rs
pcr-quic-crate/src/: keys.rs  lib.rs  params.rs  ratchet.rs
pcr-quic-crate/src/pcr_shim/: bssl.rs  crypto_shim.c  crypto_shim.h  mod.rs
pcr-quic/src/: context.rs  frame.rs  lib.rs  ratchet.rs
pcr-quic/src/pcr_shim/: CMakeLists.txt
pcr-quiche/: README.md  quiche-pcr-integration.patch
pcr-quiche-patch/: README.md
